--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,14 +64,28 @@ jobs:
         id: build-image
         working-directory: ./backend
         run: |
+          # 1. Get the version and registry
           VERSION=$(node -p "require('./package.json').version")
           REGISTRY=${{ steps.login-ecr.registry }}
-          REPOSITORY="expense-backend" # Matches your 70-ecr name
+          REPOSITORY="expense-backend"
           
+          # 2. Check if REGISTRY is empty to avoid the "invalid reference" error
+          if [ -z "$REGISTRY" ]; then
+            echo "Error: ECR Registry URL is empty. Check AWS login step."
+            exit 1
+          fi
+
+          # 3. Perform the build using the full path
+          echo "Building image: $REGISTRY/$REPOSITORY:$VERSION"
           docker build -t $REGISTRY/$REPOSITORY:$VERSION .
+          
+          # 4. Push to ECR
           docker push $REGISTRY/$REPOSITORY:$VERSION
+          
+          # 5. Export for later steps (if needed)
           echo "app_version=$VERSION" >> $GITHUB_OUTPUT
 
+          
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
