--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ on:
 env:
   AWS_REGION: 'us-east-1'
   EKS_CLUSTER_NAME: 'expense-dev' # Verify this matches your TF 40-eks name
+  DOCKER_REPO: "eswarsaikumar/expense-backend"
 
 jobs:
   infrastructure:
@@ -49,43 +50,36 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Configure AWS credentials
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and Push Backend
+        id: build-image
+        working-directory: ./backend
+        run: |
+          # 1. Get the version
+          VERSION=$(node -p "require('./package.json').version")
+          
+          # 2. Build and Tag using Docker Hub path
+          echo "Building image: ${{ env.DOCKER_REPO }}:$VERSION"
+          docker build -t ${{ env.DOCKER_REPO }}:$VERSION .
+          
+          # 3. Push to Docker Hub
+          docker push ${{ env.DOCKER_REPO }}:$VERSION
+          
+          # 4. Export for Helm
+          echo "app_version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Configure AWS credentials (for EKS)
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build and Push Backend
-        id: build-image
-        working-directory: ./backend
-        run: |
-          # 1. Get the version and registry
-          VERSION=$(node -p "require('./package.json').version")
-          REGISTRY=${{ steps.login-ecr.registry }}
-          REPOSITORY="expense-backend"
-          
-          # 2. Check if REGISTRY is empty to avoid the "invalid reference" error
-          if [ -z "$REGISTRY" ]; then
-            echo "Error: ECR Registry URL is empty. Check AWS login step."
-            exit 1
-          fi
-
-          # 3. Perform the build using the full path
-          echo "Building image: $REGISTRY/$REPOSITORY:$VERSION"
-          docker build -t $REGISTRY/$REPOSITORY:$VERSION .
-          
-          # 4. Push to ECR
-          docker push $REGISTRY/$REPOSITORY:$VERSION
-          
-          # 5. Export for later steps (if needed)
-          echo "app_version=$VERSION" >> $GITHUB_OUTPUT
-
-          
       - name: Update Kubeconfig
         run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
 
@@ -93,6 +87,12 @@ jobs:
         working-directory: ./backend/helm
         run: |
           VERSION=$(node -p "require('../package.json').version")
-          sed -i "s/IMAGE_VERSION/${VERSION}/g" values.yaml
-          # Use upgrade --install to handle first-time deployment
-          helm upgrade --install backend . --namespace expense --create-namespace
+          # Update the image repository and tag in values.yaml dynamically
+          sed -i "s|IMAGE_VERSION|${VERSION}|g" values.yaml
+          
+          # We also need to make sure Helm knows to use Docker Hub, not ECR
+          # If your deployment.yaml uses the values below, we override them:
+          helm upgrade --install backend . \
+            --namespace expense \
+            --create-namespace \
+            --set deployment.image=${{ env.DOCKER_REPO }}:${VERSION}
