--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   AWS_REGION: 'us-east-1'
-  EKS_CLUSTER_NAME: 'expense-dev' # Verify this matches your TF 40-eks name
+  EKS_CLUSTER_NAME: 'expense-dev' 
   DOCKER_REPO: "eswarsaikumar/expense-backend"
 
 jobs:
@@ -34,7 +34,7 @@ jobs:
 
       - name: Terraform Apply (Layers)
         run: |
-          folders=("00-vpc" "10-sg" "20-bastion" "30-db" "40-eks" "50-acm" "60-ingress-alb" "70-ecr")
+          folders=("00-vpc" "10-sg" "20-bastion" "30-db" "40-eks" "50-acm" "60-ingress-alb")
           for dir in "${folders[@]}"; do
             echo "Applying layer: $dir"
             cd ${{ github.workspace }}/terraform/$dir
@@ -47,32 +47,56 @@ jobs:
     if: github.event.inputs.deploy_app == 'true'
     runs-on: ubuntu-latest
     steps:
+      - name: Read Version and Install Dependencies
+        working-directory: ./backend
+        id: prep
+        run: |
+          # Read version from package.json
+          VERSION=$(node -p "require('./package.json').version")
+          echo "APP_VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          
+          # Install Dependencies
+          npm install
+          ls -ltr
+          echo "Application version: $VERSION"
+
+      - name: Build Zip Artifact
+        working-directory: ./backend
+        run: |
+          # Create zip following your Jenkins logic
+          # Excludes the zip itself and the workflow files (similar to Jenkinsfile)
+          zip -q -r backend-${{ env.APP_VERSION }}.zip . -x "*.git*" ".github/*" "backend-${{ env.APP_VERSION }}.zip"
+          ls -ltr
+
       - name: Checkout Code
         uses: actions/checkout@v4
 
+         
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Backend
-        id: build-image
+      - name: Build and Push to Docker Hub
         working-directory: ./backend
         run: |
-          # 1. Get the version
+          # 1. Extract version from package.json
           VERSION=$(node -p "require('./package.json').version")
           
-          # 2. Build and Tag using Docker Hub path
-          echo "Building image: ${{ env.DOCKER_REPO }}:$VERSION"
-          docker build -t ${{ env.DOCKER_REPO }}:$VERSION .
-          
-          # 3. Push to Docker Hub
-          docker push ${{ env.DOCKER_REPO }}:$VERSION
-          
-          # 4. Export for Helm
-          echo "app_version=$VERSION" >> $GITHUB_OUTPUT
+          # 2. Define the full repository path
+          # Format: username/repository-name
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/expense-backend"
 
+          echo "Building and pushing $IMAGE_NAME:$VERSION"
+
+          # 3. Build the Docker image
+          docker build -t $IMAGE_NAME:$VERSION .
+
+          # 4. Push the image to Docker Hub
+          docker push $IMAGE_NAME:$VERSION
+      
       - name: Configure AWS credentials (for EKS)
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -81,18 +105,25 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Update Kubeconfig
-        run: aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
+        run: |
+          # Connect to your EKS cluster
+          aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
 
-      - name: Helm Deploy Backend
+      - name: Helm Deploy to EKS
         working-directory: ./backend/helm
         run: |
+          # 1. Get the app version for the tag
           VERSION=$(node -p "require('../package.json').version")
-          # Update the image repository and tag in values.yaml dynamically
-          sed -i "s|IMAGE_VERSION|${VERSION}|g" values.yaml
           
-          # We also need to make sure Helm knows to use Docker Hub, not ECR
-          # If your deployment.yaml uses the values below, we override them:
+          # 2. Update the placeholder in values.yaml (Your Jenkins logic)
+          sed -i "s/IMAGE_VERSION/${VERSION}/g" values.yaml
+          
+          # 3. Deploy using Helm
+          # We use --set to ensure the image points to Docker Hub instead of ECR
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/expense-backend"
+          
           helm upgrade --install backend . \
             --namespace expense \
             --create-namespace \
-            --set deployment.image=${{ env.DOCKER_REPO }}:${VERSION}
+            --set deployment.image=$IMAGE_NAME:$VERSION
+
