--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -47,6 +47,11 @@ jobs:
     if: github.event.inputs.deploy_app == 'true'
     runs-on: ubuntu-latest
     steps:
+      # 1. ALWAYS CHECKOUT FIRST
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      # 2. READ VERSION & PREP
       - name: Read Version and Install Dependencies
         working-directory: ./backend
         id: prep
@@ -56,18 +61,12 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           npm install
           echo "Application version: $VERSION"
+
       - name: Build Zip Artifact
         working-directory: ./backend
         run: |
-          # Create zip following your Jenkins logic
-          # Excludes the zip itself and the workflow files (similar to Jenkinsfile)
           zip -q -r backend-${{ env.APP_VERSION }}.zip . -x "*.git*" ".github/*" "backend-${{ env.APP_VERSION }}.zip"
-          ls -ltr
 
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-         
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -77,20 +76,10 @@ jobs:
       - name: Build and Push to Docker Hub
         working-directory: ./backend
         run: |
-          # 1. Extract version from package.json
-          VERSION=$(node -p "require('./package.json').version")
-          
-          # 2. Define the full repository path
-          # Format: username/repository-name
           IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/expense-backend"
-
-          echo "Building and pushing $IMAGE_NAME:$VERSION"
-
-          # 3. Build the Docker image
-          docker build -t $IMAGE_NAME:$VERSION .
-
-          # 4. Push the image to Docker Hub
-          docker push $IMAGE_NAME:$VERSION
+          echo "Building and pushing $IMAGE_NAME:${{ env.APP_VERSION }}"
+          docker build -t $IMAGE_NAME:${{ env.APP_VERSION }} .
+          docker push $IMAGE_NAME:${{ env.APP_VERSION }}
       
       - name: Configure AWS credentials (for EKS)
         uses: aws-actions/configure-aws-credentials@v4
@@ -101,24 +90,18 @@ jobs:
 
       - name: Update Kubeconfig
         run: |
-          # Connect to your EKS cluster
           aws eks update-kubeconfig --region ${{ env.AWS_REGION }} --name ${{ env.EKS_CLUSTER_NAME }}
 
       - name: Helm Deploy to EKS
         working-directory: ./backend/helm
         run: |
-          # 1. Get the app version for the tag
-          VERSION=$(node -p "require('../package.json').version")
-          
-          # 2. Update the placeholder in values.yaml (Your Jenkins logic)
-          sed -i "s/IMAGE_VERSION/${VERSION}/g" values.yaml
-          
-          # 3. Deploy using Helm
-          # We use --set to ensure the image points to Docker Hub instead of ECR
           IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/expense-backend"
           
+          # Replace placeholder in values.yaml
+          sed -i "s/IMAGE_VERSION/${{ env.APP_VERSION }}/g" values.yaml
+          
+          # Deploy with Helm
           helm upgrade --install backend . \
             --namespace expense \
             --create-namespace \
-            --set deployment.image=$IMAGE_NAME:$VERSION
-
+            --set deployment.image=$IMAGE_NAME:${{ env.APP_VERSION }}
