--- a/frontend/helm/templates/tgb.yaml
+++ b/frontend/helm/templates/tgb.yaml
@@ -7,4 +7,4 @@ spec:
   serviceRef:
     name: frontend # route traffic to the awesome-service
     port: 80
-  targetGroupARN: arn:aws:elasticloadbalancing:us-east-1:992382681023:targetgroup/expense-dev-frontend/4487abf5037f7bd5
+  targetGroupARN: {{ .Values.targetGroupArn }}
