--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -138,20 +138,26 @@ jobs:
       # --- AUTOMATED FIX FOR TARGETGROUPBINDING ERROR ---
       - name: Install Load Balancer Controller CRDs
         run: |
-          # Use direct manifest file to avoid Kustomize accumulation errors
           kubectl apply -f https://raw.githubusercontent.com/aws/eks-charts/master/stable/aws-load-balancer-controller/crds/crds.yaml
-        # This registers 'TargetGroupBinding' without the Kustomize merge error
 
       - name: Install AWS Load Balancer Controller
         run: |
           helm repo add eks https://aws.github.io/eks-charts
           helm repo update
-          # Ensure the controller is installed to process the CRDs
           helm upgrade --install aws-load-balancer-controller eks/aws-load-balancer-controller \
             -n kube-system \
             --set clusterName=${{ env.EKS_CLUSTER_NAME }} \
             --set serviceAccount.create=true \
             --set serviceAccount.name=aws-load-balancer-controller
+
+      # --- ADDED WAIT STEP: Ensures the new network rules and Controller are active ---
+      - name: Wait for Controller and Webhook Readiness
+        run: |
+          echo "Waiting for pods to be ready..."
+          kubectl rollout status deployment/aws-load-balancer-controller -n kube-system --timeout=120s
+          echo "Stabilizing Webhook endpoints..."
+          sleep 20
+               
       - name: Helm Deploy Frontend
         working-directory: ./frontend/helm
         run: |
